# uni-cube-solver

./: .gitignore  CMakeLists.txt  README.md  main.cxx
include/: colors.h  cube.h  wall.h
src/: cube.cxx  cube_constructors.cxx  cube_moves.cxx  cube_other.cxx  cube_solving.cxx  wall.cxx
